<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<!-- Blocks Names -->
	<string name="app_name">LteShakeDownApp</string>
	<string name="startTestActivity">Check Site tests</string>
    <string name="testResultsActivity">View Test Results</string>
    <string name="submitResultsActivity">Synchronize</string>
    
	<!-- Title and Labels -->
	<string name="testSummary">The following tests will be executed:</string>
	<string name="testResults">Check the test status below:</string>
	<string name="submitTests">Fill your login and password and press send</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	
	<!-- Buttons -->
	<string name="startTestButton">Start Test!</string>
    <string name="saveTestButton">Save</string>
    <string name="submitTestResults">Send results!</string>
    <string name="storeTestResult">Save results!</string>
    
	<!-- Texts -->

</resources>
