<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">  
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitTests"        
        />
    <EditText 
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/submitUsername"/>
 
    <EditText
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/submitPassword"/>
     <!-- password -->
   <RelativeLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/testsToSubmit">  
    </RelativeLayout>
    <Button 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/submitTestResults"
    	android:textSize="20sp"
    	android:id="@+id/submitTestResults"
    />
</LinearLayout>